G1 Card table verification fails due to concurrent region cleanup

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b116

      G1 card table verification regularly fails on quite a few tests and platforms when enabled.

      That is cause for concern as this might cause remembered set entries not added, causing potential random crashes much later.

      Reproduction: run the vm.gc testsuite with -XX:+G1VerifyCTCleanup

            Assignee:
            Mikael Gerdin (Inactive)
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: