8153834: G1 Card table verification fails due to concurrent region cleanup

Reviewed-by: ehelin, tschatzl